// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content renders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  max-width: 1020px;
  margin-left: auto;
  margin-right: auto;
}

<div
  className="emotion-0"
/>
`;

exports[`Footer renders 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: var(--theme-ui-colors-bg_footer,#fff);
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 1020px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<footer
  className="emotion-1"
  id="footer"
  role="contentinfo"
  tabIndex="-1"
>
  <div
    className="emotion-0"
  />
</footer>
`;

exports[`Header renders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  z-index: 100;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: var(--theme-ui-colors-bg_header,#000);
}

<header
  className="emotion-0"
  id="site-header"
  role="banner"
>
  Test
</header>
`;

exports[`Layout renders 1`] = `
Array [
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style: none;
  position: relative;
  z-index: 1000;
  padding: 0;
}

.emotion-0 a {
  background-color: var(--theme-ui-colors-bg_header,#000);
  display: block;
  position: absolute;
  font-family: body;
  left: -9999px;
  padding: 1em;
}

.emotion-0 a:focus {
  left: 0;
}

<ul
    className="emotion-0"
  >
    <li>
      <a
        href="#content"
      >
        Skip to content
      </a>
    </li>
    <li>
      <a
        href="#footer"
      >
        Skip to footer
      </a>
    </li>
  </ul>,
  "Hi",
]
`;

exports[`Layout renders without skiplinks 1`] = `"Hello"`;

exports[`Main renders 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  max-width: 1020px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="emotion-1"
>
  <main
    className="emotion-0"
    id="content"
    role="main"
  >
    Test
  </main>
</div>
`;

exports[`MobileMenu renders 1`] = `
.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  z-index: 100;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: var(--theme-ui-colors-bg_header,#000);
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.2);
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all ease .4s;
  transition: all ease .4s;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: fixed;
  background-color: var(--theme-ui-colors-bg_mobileMenu,rgba(0,0,0,0.9));
  top: 0;
  bottom: 0;
  -webkit-transition: all ease .3s;
  transition: all ease .3s;
  opacity: 1;
  visibility: hidden;
  left: 0;
  width: 300px;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

@media screen and (min-width:750px) {
  .emotion-1 {
    width: 30vw;
  }
}

<header
  className="emotion-2"
  id="site-header"
  role="banner"
>
  <div
    className="emotion-0"
    id="menu-overlay"
    onClick={[Function]}
    role="presentation"
  />
  <div
    className="emotion-1"
    id="mobile-nav"
  />
</header>
`;

exports[`Navbar renders 1`] = `
.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin: 0 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  max-width: 1460px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
}

@media screen and (min-width:750px) {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  color: inherit;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  display: block;
}

@media screen and (min-width:750px) {
  .emotion-4 {
    display: none;
  }
}

.emotion-4 svg {
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  margin: 0;
}

<div
  className="emotion-7"
>
  <div
    className="emotion-0"
    id="site-logo"
  >
    <a
      href="/"
    >
      Logo
    </a>
  </div>
  <div
    className="emotion-5"
  >
    <nav
      className="nav-primary emotion-2"
    >
      <ul
        className="menu-primary emotion-0"
      />
    </nav>
    <div
      className="emotion-5"
    >
      <button
        aria-expanded="false"
        aria-label="Toggle Menu"
        className="emotion-4"
        onClick={[Function]}
        title="Menu"
      >
        <svg
          className="emotion-3"
          fill="currentcolor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Navbar renders with type prop override 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: none;
}

@media screen and (min-width:750px) {
  .emotion-1 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 4px;
  width: 32px;
  height: 32px;
  color: inherit;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  display: block;
}

@media screen and (min-width:750px) {
  .emotion-3 {
    display: none;
  }
}

.emotion-3 svg {
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  margin: 0;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin: 0 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 1460px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 .col-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25%;
}

@media screen and (min-width:750px) {
  .emotion-7 .col-1 {
    width: 33%;
  }
}

.emotion-7 .col-2 {
  width: 50%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media screen and (min-width:750px) {
  .emotion-7 .col-2 {
    width: 34%;
  }
}

.emotion-7 .col-3 {
  width: 25%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media screen and (min-width:750px) {
  .emotion-7 .col-3 {
    width: 33%;
  }
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-7"
>
  <div
    className="col-1 emotion-4"
  >
    <nav
      className="nav-primary emotion-1"
    >
      <ul
        className="menu-primary emotion-0"
      />
    </nav>
    <button
      aria-expanded="false"
      aria-label="Toggle Menu"
      className="emotion-3"
      onClick={[Function]}
      title="Menu"
    >
      <svg
        className="emotion-2"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </button>
  </div>
  <div
    className="col-2 emotion-4"
    id="site-logo"
  >
    <a
      href="/"
    >
      Logo
    </a>
  </div>
  <div
    className="col-3 emotion-4"
  />
</div>
`;

exports[`Section renders 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  max-width: 1020px;
  margin-left: auto;
  margin-right: auto;
}

<section
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Test
  </div>
</section>
`;

exports[`SideNav renders 1`] = `
Array [
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: var(--theme-ui-colors-bg_sideNav,#333);
  width: 300px;
  position: fixed;
  top: 0;
  bottom: 0;
  z-index: 100;
  -webkit-transform: translateX(300px);
  -ms-transform: translateX(300px);
  transform: translateX(300px);
  -webkit-transition: -webkit-transform ease .3s;
  -webkit-transition: transform ease .3s;
  transition: transform ease .3s;
}

@media screen and (min-width:750px) {
  .emotion-0 {
    position: relative;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

<div
    className="emotion-0"
    id="side-nav"
    role="navigation"
  />,
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: fixed;
  display: inline-block;
  bottom: 30px;
}

@media screen and (min-width:750px) {
  .emotion-0 {
    display: none;
  }
}

<button
    aria-label="Toggle side navigation"
    className="emotion-0"
    id="toggle-sidenav"
    onClick={[Function]}
    title="Toggle SideNav"
  >
    Toggle
  </button>,
]
`;

exports[`Sidebar renders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  max-width: 1020px;
  margin-left: auto;
  margin-right: auto;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="emotion-2"
>
  <aside
    className="emotion-0"
    id="primary-sidebar"
    role="complementary"
  />
  <main
    className="emotion-1"
    id="content"
    role="main"
  />
</div>
`;

exports[`Topbar renders 1`] = `
.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: var(--theme-ui-colors-bg_topbar,#355cac);
  display: block;
}

.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: auto;
  margin-right: auto;
  overflow-x: scroll;
  white-space: nowrap;
  max-width: 1260px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<aside
  className="emotion-1"
  role="complementary"
>
  <div
    className="emotion-0"
  />
</aside>
`;
